tests/machine/x/pl/bool_chain.out
ERROR: /workspace/mochi/tests/machine/x/pl/bool_chain.pl:2:4: Syntax error: Operator expected
ERROR: /workspace/mochi/tests/machine/x/pl/bool_chain.pl:12:7: Syntax error: Operator expected

